<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <EditText
            android:id="@+id/txtSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Ex, Cali, CO"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#E5E8E8"
            android:text="@string/Btn_Search"
            android:textColor="@color/black"
            app:backgroundTint="#E5E8E8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="#96E7DD"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Tex_Current"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/lblCurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/Tex_CurrentR"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#85C1E9"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Tex_Min"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/lblmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Tex_MinR"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F9E79F"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Tex_Max"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/lblmax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Tex_MaxR"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#F5B7B1"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Tex_Weather"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textViewWeather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Tex_WeatherR"
                android:textColor="@color/black" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imgWeather"
            android:layout_width="146dp"
            android:layout_height="146dp"
            android:layout_gravity="center"
            android:padding="10dp"
            app:srcCompat="@android:drawable/divider_horizontal_bright"
            tools:srcCompat="@android:drawable/divider_horizontal_bright" />

        <Button
            android:id="@+id/btnGo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#E5E8E8"
            android:text="@string/Btn_Maps"
            android:textColor="@color/black"
            app:backgroundTint="#E5E8E8" />

    </LinearLayout>

</RelativeLayout>